--- a/app/assets/stylesheets/campaigns/promo.scss
+++ b/app/assets/stylesheets/campaigns/promo.scss
@@ -73,6 +73,17 @@
   }
 }
 
+.data-block {
+  h3 {
+    font-size: 20px;
+    margin: 0;
+  }
+
+  table {
+    margin-top: 20px;
+  }
+}
+
 @media(max-width: 480px) {
   .stat-block {
     flex: 0 0 49%;
