--- a/app/views/campaigns/promo.html.erb
+++ b/app/views/campaigns/promo.html.erb
@@ -72,9 +72,7 @@
         </div>
         <div class="data-block">
           <h3>Commandes potentielles</h3>
-          <% if  @campaign.test_type == "Test ouvert" %>
-            <%= render 'data-open-campaign' %>
-          <% end %>
+            <%= render 'data-campaign' %>
         </div>
 
       </div>
