--- a/app/views/pros/my_campaigns.html.erb
+++ b/app/views/pros/my_campaigns.html.erb
@@ -9,16 +9,16 @@
       <h5>Vos campagnes</h5>
         <% if @campaigns.present? %>
           <table>
-            <tr>
-              <th>Nom de la campagne</th>
-              <th>Type de campagne</th>
-              <th>Statut</th>
-              <th>Vues uniques</th>
-              <th>Vues totales</th>
-              <th>Voir</th>
+            <tr class="first-left">
+              <th class="cell100 column1">Nom de la campagne</th>
+              <th class="cell100 column2">Type de campagne</th>
+              <th class="cell100 column3">Statut</th>
+              <th class="cell100 column4">Vues uniques</th>
+              <th class="cell100 column5">Vues totales</th>
+              <th class="cell100 column6">Voir</th>
             </tr>
             <% @campaigns.each do |campaign| %>
-              <tr>
+              <tr class="tr-body">
                 <td><%= campaign.product.title %></td>
                 <td><%= campaign.test_type %></td>
                 <% if campaign.state == "ongoing" %>
@@ -39,3 +39,5 @@
     </div>
   </div>
 </div>
+
+
