--- a/app/assets/stylesheets/campaigns/promo.scss
+++ b/app/assets/stylesheets/campaigns/promo.scss
@@ -5,13 +5,6 @@
   margin: 20px 0;
 }
 
-.data-block {
-  flex: 0 0 98%;
-  border: 1px solid rgba(0,0,0,.0625);
-  padding: 20px;
-  background-color: #FFF;
-}
-
 .stat-block {
   border: 1px solid rgba(0,0,0,.0625);
   padding: 20px;
@@ -79,17 +72,25 @@
     font-size: 20px;
     margin: 0;
   }
+}
 
-  table {
-    display: block;
-    overflow-x: auto;
-    white-space: nowrap;
-    margin-top: 20px;
-  }
+table {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+  margin-top: 20px;
+}
 
-  td, th {
-    text-align: center;
-  }
+tbody {
+  width: 100%;
+  display: table;
+}
+
+th {
+  padding: 15px 20px;
+}
+td, th {
+  text-align: center;
 }
 
 .orders {
@@ -110,12 +111,23 @@
 }
 
 @media(max-width: 480px) {
+
+  .campaigns-container, .campaign-container {
+    padding: 30px 10px;
+  }
   .stat-block {
     flex: 0 0 49%;
+    h3 {
+      font-size: 18px;
+    }
   }
 
   .table-container {
-    width: 280px;
+    width: 298px;
+  }
+
+  .data-block {
+    margin-top: 20px;
   }
 
 }
