--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -17,6 +17,6 @@
 </div>
 <div class="campaign-link">
   <%= link_to new_product_campaign_path(product) do %>
-    <div class="new_campaign_buttom btn-white">Lancer une campagne</div>
+    <div class="new_campaign_buttom btn-light">Lancer une campagne</div>
   <% end %>
 </div>
