--- a/app/views/campaigns/promo.html.erb
+++ b/app/views/campaigns/promo.html.erb
@@ -35,7 +35,7 @@
         <div class="stat-block">
           <div class="top-block">
             <h3>Nombre de visites</h3>
-            <span><%= @campaign.views %>/<%= @campaign.views %></span>
+            <span><%= @campaign.views %></span>
           </div>
           <div class="bottom-block">
             <i class="far fa-eye"></i>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <div class="data-block">
-        <h3>Commandes potentielles</h3>
+        <h3>Commandes à valider</h3>
           <%= render 'data-campaign' %>
       </div>
 
