--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
           <div class="btn-orange">Ajouter un produit</div>
          <% end %>
       </div>
-      <div class="right-part info-bloc">
+      <div class="right-part product-feed">
         <% if @products.present? %>
           <%= render @products %>
         <% else %>
