--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -9,19 +9,40 @@
   align-items: flex-start;
 }
 
+
+.product-feed {
+  padding: 0 20px;
+}
+
 .product-iterration {
   flex: 0 0 55%;
 }
 
 .campaign-link {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  align-items: center;
   padding: 15px;
   margin-bottom: 40px;
   background-color: #f1f8fc;
   border: 1px solid rgba(0, 0, 0, 0.0625);
   border-bottom-right-radius: 2px;
   border-bottom-left-radius: 2px;
+}
+
+.new_campaign_buttom {
+  font-weight: bold;
+}
+
+.status-overview {
+  i {
+    margin-right: 10px;
+    font-size: 15px;
+  }
+
+  span {
+    text-transform: uppercase;
+  }
 }
 
 .product-card {
