--- a/app/views/pros/_right-links-dashboard.html.erb
+++ b/app/views/pros/_right-links-dashboard.html.erb
@@ -5,17 +5,17 @@
 
   <!-- Overlay content -->
   <div class="overlay-content">
+    <%= link_to pro_path(@pro) do %>
+      <div class="link <%= 'selected-category' if @page == 'show'  %>"><i class="fas fa-tachometer-alt"></i> Paramètres</div>
+    <% end %>
     <%= link_to products_path do %>
       <div class="link <%= 'selected-category' if @page == 'products'  %>"><i class="fas fa-box-open"></i> Produits</div>
     <% end %>
-    <%= link_to pro_path(@pro) do %>
-      <div class="link"><i class="fas fa-tachometer-alt"></i> Paramètres</div>
+    <%= link_to my_campaigns_pro_path(@pro) do %>
+      <div class="link <%= 'selected-category' if @page == 'campaigns'  %>"><i class="fas fa-flask"></i> Campagnes</div>
     <% end %>
     <%= link_to edit_pro_path(@pro) do %>
-      <div class="link"><i class="fas fa-lock"></i> Sécurité</div>
-    <% end %>
-    <%= link_to my_campaigns_pro_path(@pro) do %>
-      <div class="link"><i class="fas fa-flask"></i> Campagnes</div>
+      <div class="link <%= 'selected-category' if @page == 'edit'  %>"><i class="fas fa-lock"></i> Sécurité</div>
     <% end %>
     <div class="link"><i class="fas fa-question-circle"></i> Aide</div>
     <div class="link"><i class="fas fa-envelope"></i> Nous contacter</div>
