--- a/app/assets/stylesheets/pages/_pros.scss
+++ b/app/assets/stylesheets/pages/_pros.scss
@@ -89,7 +89,7 @@
 
 .test-type, .box-case {
   margin-top: 10px;
-  background: linear-gradient(#fff, #F0F0F3);
+  background: #FFF;
   border: 1px solid #e8e8e8;
   padding: 15px;
   border-radius: 7px;
