--- a/app/assets/stylesheets/campaigns/index.scss
+++ b/app/assets/stylesheets/campaigns/index.scss
@@ -1,3 +1,10 @@
+#new_campaign {
+  .product-card {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.0625);
+    margin-bottom: 30px;
+  }
+}
+
 .explain-block {
   margin-bottom: 30px;
   h3 {
