save input form price

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -51,6 +51,7 @@ input[type=number]::-webkit-outer-spin-button {
 
 .form-control {
   color: #495057 !important;
+  border-radius: 20px !important;
 }
 
 .nav-tabs > li.active > a {
