--- a/app/assets/stylesheets/pages/_right.scss
+++ b/app/assets/stylesheets/pages/_right.scss
@@ -11,7 +11,7 @@
 }
 
 .encart-element-background {
-  background: linear-gradient(#fff, #F0F0F3);
+  background: #FDFDFD;
   border: 1px solid #e8e8e8;
   padding: 15px;
   border-radius: 2px;
