--- a/app/assets/stylesheets/products/_show.scss
+++ b/app/assets/stylesheets/products/_show.scss
@@ -1,7 +1,8 @@
 #product_price, #pick_price {
   padding: 6px 12px 6px 30px;
-  margin-top: 30px;
+  width: 50%;
 }
+
 
 .products-container {
   display: flex;
