--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
     <div class="user-menu">
       <% if @user.present? %>
         <%= link_to my_campaigns_user_path(current_user) do %>
-          <i class="fas fa-flask"></i>
+          <%= image_tag "blue-icon.png", class:"pick-icon" %>
         <% end %>
       <% end %>
       <div class="dropdown">
