--- a/app/views/pros/show.html.erb
+++ b/app/views/pros/show.html.erb
@@ -4,13 +4,13 @@
 <div class="dashboard-container">
   <%= render 'dashboard-navigation' %>
   <div class="general-infos">
-    <%= simple_form_for @pro do |f| %>
-      <div class="text-and-form">
-        <div class="text-part">
-          <h5>Informations générales</h5>
-          <p>Pickalgo utilisera ces informations afin de vous contacter</p>
-        </div>
-        <div class="right-part info-bloc">
+    <div class="text-and-form">
+      <div class="text-part">
+        <h5>Informations générales</h5>
+        <p>Pickalgo utilisera ces informations afin de vous contacter</p>
+      </div>
+      <div class="right-part info-bloc">
+        <%= simple_form_for @pro do |f| %>
           <div class="form-inputs">
             <div class="input-and-icon">
               <%= f.input :brand, label: false, placeholder:'Marque ou raison sociale' %>
@@ -29,40 +29,34 @@
               <span class="icon fas fa-phone"></span>
             </div>
           </div>
-        </div>
+        <%= f.button :submit, "Enregistrer", class: "btn-blue", id:"save-cta" %>
+      <% end %>
+    </div>
+  </div>
+    <div class="text-and-form">
+      <div class="text-part">
+        <h5>Modifier votre mot de passe</h5>
+        <p>Vous avez la possibilité de modifier votre mot de passe. Pour cela veuillez saisir votre mot de passe actuel, en choisir un nouveau de minimum 6 carractères, confirmez ce nouveau mot de passe puis enregistrez la modificiation.</p>
       </div>
-      <div class="text-and-form">
-        <div class="text-part">
-          <h5>Social & bio</h5>
-          <p>Informations que pourront consulter les utilisateurs Pickalgo à propos de votre marque ou service. Ajoutez un bref historique sur votre marque ou service, ainsi que les liens vers vos pages sur les réseaux sociaux ou vous êtes présents. Les utilisateurs retrouveront ces informations lors d'une campagne dans la rubrique "A propos".</p>
-        </div>
-        <div class="right-part info-bloc">
-        <div class="form-inputs">
-          <div class="input-and-icon">
-            <%= f.input :facebook, label: false, placeholder:'Votre page facebook' %>
-            <span class="icon fab fa-facebook"></span>
+      <div class="right-part info-bloc">
+        <%= simple_form_for @pro, :url => update_password_pro_path(@pro), :method => :patch do |f| %>
+          <div class="form-inputs">
+            <div class="input-and-icon">
+              <%= f.input :current_password, required: true, label: false, placeholder: 'Mot de passe actuel'%>
+              <span class="icon fas fa-lock"></span>
+            </div>
+            <div class="input-and-icon">
+              <%= f.input :password, required: true, label: false, placeholder: 'Nouveau mot de passe', hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
+              <span class="icon fas fa-lock"></span>
+            </div>
+            <div class="input-and-icon">
+              <%= f.input :password_confirmation, required: true, label: false, placeholder: 'Confirmer le nouveau mot de passe' %>
+              <span class="icon fas fa-lock"></span>
+            </div>
           </div>
-          <div class="input-and-icon">
-            <%= f.input :insta, placeholder:'Votre page instagram', label: false %>
-            <span class="icon fab fa-instagram"></span>
-          </div>
-          <div class="input-and-icon">
-            <%= f.input :youtube, label: false, placeholder:'Votre page youtube' %>
-            <span class="icon fab fa-youtube"></span>
-          </div>
-          <div class="input-and-icon">
-            <%= f.input :twitter, label: false, placeholder: 'Votre page twitter' %>
-            <span class="icon fab fa-twitter"></span>
-          </div>
-          <div class="input-and-icon">
-            <%= f.input :bio, label: false, placeholder: 'Mini-bio: Décrivez votre marque ou service en quelques mots' %>
-            <span class="icon fas fa-pen-fancy"></span
-          </div>
-        </div>
-        </div>
+          <%= f.button :submit, "Changer mot de passe", class: "btn-blue", id:"password-cta" %>
+        <% end %>
       </div>
-      <%= f.button :submit, "Enregistrer", class: "btn-blue", id:"save-cta" %>
-    <% end %>
   </div>
 </div>
 
