--- a/app/assets/stylesheets/components/_attachinary.scss
+++ b/app/assets/stylesheets/components/_attachinary.scss
@@ -1,9 +1,11 @@
 .attachinary_container {
   display: flex;
+  flex-wrap: wrap;
 
   .picture-upload {
     position: relative;
-    margin: 30px 30px 30px 0;
+    margin: 0 30px 30px 0;
+    display: inline-block;
     img {
       border-radius: 2px;
     }
