--- a/app/views/products/_new-edit-form.html.erb
+++ b/app/views/products/_new-edit-form.html.erb
@@ -17,7 +17,7 @@
   <h5>Médias</h5>
   <div class="media-display">
     <div class="chooseFile">
-      <div><span class="glyphicon glyphicon-plus"></span>Ajouter des photos<span style="color: #ff6d43; font-size: 13px; font-weight: bold; margin-left: 10px;">(min-1 / max-5)</span></div>
+      <span class="glyphicon glyphicon-plus"></span>Ajouter des photos<span style="color: #72777a; font-size: 13px; font-weight: bold; margin-left: 10px;">(min-1 / max-5)</span>
     </div>
     <div class="input-block attach">
       <%= f.attachinary_file_field :photos, label: false, class: "upload", cloudinary: { transformation: { width: 1220, height: 813, crop: :limit } } %>
@@ -27,8 +27,7 @@
     </div>
     <div class="input-block video-block">
       <%= f.input :video_url, label: "Lien Youtube", placeholder: "coller ici l'url d'une video youtube" %>
-
-      <div class="media-preview">
+      <div class="media-preview hidden">
         <iframe id="iframe" src="">
         </iframe>
       </div>
