--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -17,29 +17,17 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 10px;
-}
-
-.name-and-cat {
-  .product_title, .product_category {
+  .product_title, .product_category, .product_price, .product_price_ht, .product_expedition_costs, .product_website, .product_size_guide  {
     flex: 0 0 40%;
   }
 }
+
+
 
 .product_description {
   margin-bottom: 30px;
 }
 
-.price-and-cost {
-  .product_price, .product_price_ht, .product_expedition_costs {
-    flex: 0 0 40%;
-  }
-}
-
-.website {
-  .product_website, .product_size_guide {
-    flex: 0 0 40%;
-  }
-}
 
 .chooseFile, .chooseVideo {
   color: $orange;
