--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,7 +3,7 @@
   <div class="recap-body">
     <div class="title-and-price">
       <h3><%= product.title.capitalize %></h3>
-      <p><%= product.price %> €</p>
+      <p><%= sprintf('%.2f', product.price) %> €</p>
     </div>
     <div class="product-category">
       <p class="<%= product.category.name.downcase.gsub('é', 'e') %>"><%= product.category.name %></p>
