--- a/app/assets/stylesheets/products/_new.scss
+++ b/app/assets/stylesheets/products/_new.scss
@@ -46,19 +46,53 @@
 
 .video-block {
   margin-bottom: 40px;
+  width: 40%;
 }
 
 .media-preview {
-  display: inline-block;
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+  #iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
 
-#product_video_url {
-  width: 40%;
-}
+
 
 #product_facebook, #product_instagram, #product_youtube, #product_twitter {
   width: 40%;
   padding: 6px 12px 6px 35px;
+}
+
+@media screen and (max-width: 768px) {
+  h1 {
+    margin-top: 20px;
+  }
+  .input-group {
+    .product_title, .product_category, .product_price, .product_price_ht, .product_expedition_costs, .product_website, .product_size_guide  {
+      flex: 0 0 100%;
+    }
+  }
+
+
+  #product_facebook, #product_instagram, #product_youtube, #product_twitter {
+    width: 100%;
+    padding: 6px 12px 6px 35px;
+  }
+
+  .media-preview {
+    width: 100%;
+  }
+
+  .video-block {
+    width: 100%;
+  }
 }
 
 
