--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,19 +1,11 @@
-
 <%= render 'pros/navbar' %>
 <%= render 'pros/right-links-dashboard' %>
 <div class="dashboard-container">
   <%= render 'pros/dashboard-navigation' %>
   <div class="general-infos">
-    <div class="products-container">
-      <div class="text-part">
-        <h5>Editer <%= @product.title %></h5>
-        <p>Modifiez ici les informations relatives à <%= @product.title.capitalize %>. Ces information relatives à votre produit seront visibles par les utilisateurs.
-         </p>
-         <%= link_to products_path do %>
-          <div class="btn-white">Retour aux produits</div>
-         <% end %>
-      </div>
-      <div class="right-part info-bloc">
+    <div class="product-container">
+      <h1>Editer <%= @product.title %></h1>
+      <div class="info-bloc">
         <%= render 'new-edit-form' %>
       </div>
     </div>
