--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -21,6 +21,9 @@
         </div>
       </div>
       <div class="campaigns-presentation">
+        <div id="infinite-scrolling">
+          <%= will_paginate @campaigns %>
+        </div>
         <%= render @campaigns %>
       </div>
       <%= render "shared/right-encart" %>
