--- a/app/views/users/pick_page.js.erb
+++ b/app/views/users/pick_page.js.erb
@@ -1,4 +1,4 @@
-$('.product-feed').append('<%= j render 'users/my_picks', picks: @picks %>');
+$('.product-feed').append('<%= j render 'users/add-pick-history', picks: @picks %>');
 <% if @picks.next_page %>
   $('.pagination').replaceWith('<%= j will_paginate @picks %>');
 <% else %>
