--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,6 +15,9 @@
       </div>
       <div class="right-part product-feed">
         <% if @products.present? %>
+          <div id="infinite-scrolling">
+            <%= will_paginate @products %>
+          </div>
           <%= render @products %>
         <% else %>
           <h4>Vous n'avez encore ajouté aucun produit</h4>
