--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -30,3 +30,12 @@ label {
     margin-right: 10px;
   }
 }
+
+.pick-menu {
+  display: flex;
+  align-items: flex-start;
+  .pick-icon {
+    height: 20px;
+    margin-right: 15px;
+  }
+}
