--- a/app/views/users/_right-links-dashboard.html.erb
+++ b/app/views/users/_right-links-dashboard.html.erb
@@ -6,10 +6,7 @@
   <!-- Overlay content -->
   <div class="overlay-content">
     <%= link_to user_path(@user) do %>
-      <div class="link"><i class="fas fa-tachometer-alt"></i> Paramètres</div>
-    <% end %>
-    <%= link_to edit_user_path(@user) do %>
-      <div class="link"><i class="fas fa-lock"></i> Sécurité</div>
+      <div class="link <%= 'selected-category' if @page == 'show'  %>"><i class="fas fa-tachometer-alt"></i> Paramètres</div>
     <% end %>
     <div class="link"><i class="fas fa-flask"></i> Campagnes</div>
     <div class="link"><i class="fas fa-question-circle"></i> Aide</div>
