--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,45 +4,71 @@
 <div class="dashboard-container">
   <%= render 'dashboard-navigation' %>
   <div class="general-infos">
-    <%= simple_form_for @user do |f| %>
-      <div class="text-and-form">
-        <div class="text-part">
-          <h5>Vos informations personnelles</h5>
-          <p>Retrouvez et mettez à jour ici toutes vos informations personnelles.</p>
-        </div>
-        <div class="right-part info-bloc">
-          <div class="form-inputs">
-            <div class="input-and-icon gender">
-              <%= f.collection_radio_buttons :sex, [["Madame", 'Madame'] ,["Monsieur", 'Monsieur']], :first, :last %>
-            </div>
-            <div class="input-and-icon">
-              <%= f.input :first_name, label: false, placeholder:'Prénom' %>
-              <span class="icon fas fa-user"></span>
-            </div>
-            <div class="input-and-icon">
-              <%= f.input :last_name, placeholder:'Nom', label: false %>
-              <span class="icon fas fa-user"></span>
-            </div>
-            <div class="input-and-icon">
-              <%= f.input :email, label: false, placeholder:'Email' %>
-              <span class="icon fas fa-envelope"></span>
-            </div>
-            <div class="input-and-icon">
-              <%= f.input :phone, label: false, placeholder:'Mobile' %>
-              <span class="icon fas fa-phone"></span>
-            </div>
-            <div class="input-and-icon">
-              <label for="date_of_birth"><i class="fas fa-calendar-alt"></i> Date d'anniversaire</label>
-              <%= f.input :date_of_birth, label: false, as: :date,  start_year: Date.today.year - 16,
-                                                    end_year: 1900,
-                                                    order: [:day, :month, :year], :prompt => { :month => 'Mois', :year => 'Année', :day => 'Jour' }, use_month_numbers: true  %>
+    <div class="text-and-form">
+      <div class="text-part">
+        <h5>Vos informations personnelles</h5>
+        <p>Retrouvez et mettez à jour ici toutes vos informations personnelles.</p>
+      </div>
+      <div class="right-part info-bloc">
+        <%= simple_form_for @user do |f| %>
+        <div class="form-inputs">
+          <div class="input-and-icon gender">
+            <%= f.collection_radio_buttons :sex, [["Madame", 'Madame'] ,["Monsieur", 'Monsieur']], :first, :last %>
+          </div>
+          <div class="input-and-icon">
+            <%= f.input :first_name, label: false, placeholder:'Prénom' %>
+            <span class="icon fas fa-user"></span>
+          </div>
+          <div class="input-and-icon">
+            <%= f.input :last_name, placeholder:'Nom', label: false %>
+            <span class="icon fas fa-user"></span>
+          </div>
+          <div class="input-and-icon">
+            <%= f.input :email, label: false, placeholder:'Email' %>
+            <span class="icon fas fa-envelope"></span>
+          </div>
+          <div class="input-and-icon">
+            <%= f.input :phone, label: false, placeholder:'Mobile' %>
+            <span class="icon fas fa-phone"></span>
+          </div>
+          <div class="input-and-icon">
+            <label for="date_of_birth"><i class="fas fa-calendar-alt"></i> Date d'anniversaire</label>
+            <%= f.input :date_of_birth, label: false, as: :date,  start_year: Date.today.year - 16,
+                                                  end_year: 1900,
+                                                  order: [:day, :month, :year], :prompt => { :month => 'Mois', :year => 'Année', :day => 'Jour' }, use_month_numbers: true  %>
 
             </div>
           </div>
-        </div>
+          <%= f.button :submit, "Enregistrer", class: "btn-blue", id:"save-cta" %>
+        <% end %>
       </div>
-      <%= f.button :submit, "Enregistrer", class: "btn-blue", id:"save-cta" %>
-    <% end %>
+    </div>
+    <div class="text-and-form">
+      <div class="text-part">
+        <h5>Modifier votre mot de passe</h5>
+        <p>Vous avez la possibilité de modifier votre mot de passe. Pour cela veuillez saisir votre mot de passe actuel, en choisir un nouveau de minimum 6 carractères, confirmez ce nouveau mot de passe puis enregistrez la modificiation.</p>
+      </div>
+      <div class="right-part info-bloc">
+        <%= simple_form_for(@user, :url => { :action => "update_password" } ) do |f| %>
+          <div class="form-inputs">
+            <div class="input-and-icon">
+              <%= f.input :current_password, required: true, label: false, placeholder: 'Mot de passe actuel'%>
+              <span class="icon fas fa-lock"></span>
+            </div>
+            <div class="input-and-icon">
+              <%= f.input :password, required: true, label: false, placeholder: 'Nouveau mot de passe', hint: ("#{@minimum_password_length} caractères minimum" if @minimum_password_length) %>
+              <span class="icon fas fa-lock"></span>
+            </div>
+            <div class="input-and-icon">
+              <%= f.input :password_confirmation, required: true, label: false, placeholder: 'Confirmer le nouveau mot de passe' %>
+              <span class="icon fas fa-lock"></span>
+            </div>
+          </div>
+          <%= f.button :submit, "Changer mot de passe", class: "btn-blue", id:"password-cta" %>
+        <% end %>
+      </div>
+    </div>
+
   </div>
 </div>
 
