able to save pro stripe account

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,8 +14,8 @@
             <div class="btn-orange">Ajouter un produit</div>
           <% end %>
         <% else %>
-          <p>Pour ajouter un produit et lancer une campagne, vous devez en premier lieu renseigner le compte sur lequel vous souhaitez encaisser les commandes à la fin de la campagne.</p>
-          <a class= "btn-blue" href="<%= stripe_url %>">Créér mon compte produit</a>
+          <p>Pour ajouter un produit et lancer une campagne, vous devez en premier lieu renseigner le compte sur lequel vous souhaitez encaisser les commandes de vos diffétentes campagnes.</p>
+          <a class= "btn-blue" href="<%= stripe_url %>">Autoriser les encaissements</a>
          <% end %>
       </div>
       <div class="right-part product-feed">
